# ffm-test

./: .gitignore  CMakeLists.txt  README.md  build.sh  pom.xml  run-MPIHelloWorld-on-wls.sh  run-MPIRing-on-wsl.sh  run_MPIRing-on-Math-Cluster.sh
src/main/c/: HelloWorld.c  HelloWorld.h  Ring.c
src/main/java/: Datatype.java  LibMpiArgs.java  LinkedHelloWorld.java  MPIHelloWorld.java  MPIRing.java  NativeMpi.java
